--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ REACT_APP_API_URL_BPC="http://127.0.0.1:8026"
 REACt_APP_DEFAULTAUTH=fake
 
 GENERATE_SOURCEMAP= false
+REACT_APP_SITE_KEY=6LdiiS0qAAAAAJq2cECE7FbTFOyphqVcSWjmuiPp
+SITE_SECRET=6LdiiS0qAAAAAKa8aTgZYa0YR_JteQ8C5ZLBYlHx
