--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "formik": "^2.4.6",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-lazyload": "^3.2.1",
     "react-owl-carousel": "^2.3.3",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
+    "reactstrap": "^9.2.2",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "thunk": "^0.0.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
