--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_API_URL_BPC="http://127.0.0.1:8026"
+# REACT_APP_API_URL_BPC="https://server.bpcindia.org"
 
 REACt_APP_DEFAULTAUTH=fake
 
