--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -15,13 +16,16 @@
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "jquery": "^3.7.1",
+    "photoswipe": "^5.4.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.2.1",
+    "react-image-lightbox": "^5.1.4",
     "react-intersection-observer": "^9.13.0",
     "react-lazyload": "^3.2.1",
+    "react-modal": "^3.16.1",
     "react-owl-carousel": "^2.3.3",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
