--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
+    "html2pdf.js": "^0.10.2",
     "jquery": "^3.7.1",
     "photoswipe": "^5.4.4",
     "react": "^18.3.1",
