--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html2pdf.js": "^0.10.2",
     "jquery": "^3.7.1",
     "photoswipe": "^5.4.4",
+    "puppeteer": "^23.6.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
